--- a/AspNestTaskAll/Views/Shared/Components/Product/Default.cshtml
+++ b/AspNestTaskAll/Views/Shared/Components/Product/Default.cshtml
@@ -6,8 +6,12 @@
             <div class="product-img-action-wrap">
                 <div class="product-img product-img-zoom">
                     <a href="shop-product-right.html">
+                        @{ string isBack = item.ProductImages.FirstOrDefault(x => x.IsBack == true)?.Image; }
                         <img class="default-img" width="190" src="~/assets/imgs/products/@item.ProductImages.FirstOrDefault(pi=>pi.IsFront==true).Image" alt="" />
-                        <img class="hover-img" width="190" src="~/assets/imgs/products/@item.ProductImages.FirstOrDefault(pi=>pi.IsBack==true).Image" alt="" />
+                        @if (isBack != null)
+                        {
+                            <img class="hover-img" src="~/assets/imgs/shop/@isBack" alt="" />
+                        }
                     </a>
                 </div>
                 <div class="product-action-1">
